Fix Java deprecations
Signed-off-by: Wouter Born <github@maindrain.net>