@@ -129,7 +129,7 @@ public class ZWaveSwitchAllCommandClass extends ZWaveCommandClass implements ZWa
         }
 
         ZWaveCommandClassValueEvent zEvent = new ZWaveCommandClassValueEvent(getNode().getNodeId(), endpoint,
-                getCommandClass(), new Integer(m));
+                getCommandClass(), Integer.valueOf(m));
         getController().notifyEventListeners(zEvent);
 
         initialiseDone = true;
