@@ -13,9 +13,9 @@
 package org.openhab.binding.zwave.internal.protocol.commandclass.impl;
 
 import java.io.ByteArrayOutputStream;
-import java.lang.IllegalArgumentException;
 import java.util.HashMap;
 import java.util.Map;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -180,7 +180,7 @@ public class CommandClassZwaveplusInfoV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Z-Wave+ Version'
-        response.put("Z_WAVE_PLUS_VERSION", new Integer(payload[2]));
+        response.put("Z_WAVE_PLUS_VERSION", Integer.valueOf(payload[2]));
 
         // Process 'Role Type'
         switch (payload[3]) {
